--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap">
     <link rel="stylesheet" href="style.css">
-    
     <title>Calculadora</title>
 </head>
 <body>
-    
     <label class="switch">
         <input type="checkbox" id="check">
         <span class="toggle"></span>
@@ -40,7 +41,7 @@
 
             <input type="button" value="0" class="btn" onclick="display('0')"/>
             <input type="button" value="." class="operator" onclick="display('.')"/>
-            <input type="button" value="=" class="btn" onclick="solve()"/>
+            <input type="button" value="=" class="btnEqual" onclick="solve()"/>
         </div>
     </div>
     <script src="./script.js"></script>
