--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=VT323&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="./style.css">
+
     <title>Calculadora</title>
 </head>
 <body>
-    <label class="switch">
-        <input type="checkbox" id="check">
-        <span class="toggle"></span>
-    </label>
+    <button type="button" class="fas fa-moon" onclick="cambiarModo()"></button>
     <div class="container">
         <div class="calculator">
             <input type="text" placeholder="0" id="result"/>
@@ -44,6 +43,6 @@
             <input type="button" value="=" class="btnEqual" onclick="solve()"/>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
